finished up to post add view

--- a/App/Views/Profile/show.html
+++ b/App/Views/Profile/show.html
@@ -11,6 +11,12 @@
         <dd>{{ user.name }}</dd>
         <dt>email</dt>
         <dd>{{ user.email }}</dd>
+        <dt>Signup Category</dt>
+        {% if user.is_student %}
+        <dd>Student</dd>
+        {% else %}
+        <dd>Invester</dd>
+        {% endif %}
     </dl>
 
     <a href="/profile/edit">Edit</a>
