--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -74,6 +74,14 @@
             <input type="password" id="inputPassword" name="password" placeholder="Password" required class="form-control" />
         </div>
 
+        <div class="form-group">
+            <label for="sel1">Select Signup Category:</label>
+            <select class="form-control" id="sel1" name="category" required>
+              <option value="Signup as Student">Signup as Student</option>
+              <option value="Signup as Invester">Signup as Invester</option>
+            </select>
+        </div>
+
         <button type="submit" class="btn btn-default">Sign up</button>
 
     </form>
