--- a/App/Views/Profile/edit.html
+++ b/App/Views/Profile/edit.html
@@ -58,7 +58,7 @@
 
     <h1>Profile</h1>
 
-    {% if user.errors is not empty %}
+    {% if user.errors is not empty  %}
         <p>Errors:</p>
         <ul>
             {% for error in user.errors %}
@@ -75,7 +75,7 @@
         </div>
         <div class="form-group">
             <label for="inputEmail">Email address</label>
-            <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" class="form-control" />
+            <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" disabled class="form-control" />
         </div>
         <div class="form-group">
             <label for="inputPassword">Password</label>
