--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -3,22 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
 
-	<div class="container">
+	<div class="container ">
 
-        <nav class="navbar navbar-default">
+        <nav class="navbar navbar-expand-lg navbar-light mx-auto border p-4 my-4">
             <div class="container-fluid">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Home</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item" ><a class="nav-link" href="/post/show">Post</a></li>
+                    {% if current_user %}
+                    
+                    {% endif %}
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user %}
-                        <li><a href="/profile/show">Profile</a></li>
-                        <li><a href="/logout">Log out</a></li>                                
+                        <li class="nav-item"><a class="nav-link" href="/profile/show">Profile</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
+                        {% else %}
+                        <li class="nav-item" ><a class="nav-link" href="/signup/new">Sign up</a></li>
+                        <li class="nav-item" ><a class="nav-link" href="/login">log in</a></li>                         
                     {% endif %}
                 </ul>
             </div>
