--- a/App/Views/post/new.html
+++ b/App/Views/post/new.html
@@ -43,7 +43,7 @@
                 required type="text" class="form-control" ></textarea>
             </div>        
             
-            <button type="submit" class="btn btn-default">Publish post</button>
+            <button type="submit" class="btn btn-defult">Publish post</button>
             
         </form>
         
