base designed changed

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,7 +4,7 @@
 
 {% block body %}
 
-    <h1>Welcome To BSC.com.np</h1>
+    <h1>Welcome To BSG.com.np</h1>
     <p>
         It's a page developed and designed by CSIT students of birendra multiple campus.
     </p>
@@ -19,6 +19,7 @@
             need not to scramble here and there for invester. Students can find lots of invester in
             our page who can invest on you if your startup plan is really good.
             <h5>What for general public?</h5>
+            General public can post their emmergency help post so that anyone near them can help them.
         </p>
     </div>
     <div class = "mx-auto border p-4 my-4" >
@@ -26,10 +27,12 @@
             <h1>For whom is this page developed?</h1>
             <hr>
             This page was developed for students and general public.
-            <h5>What for students</h5>
+            <h5>What for students?</h5>
             Students can post their startup ideas their details for invester to attract so that they
             need not to scramble here and there for invester. Students can find lots of invester in
             our page who can invest on you if your startup plan is really good.
+            <h5>What for general public?</h5>
+            General public can post their emmergency help post so that anyone near them can help them.
         </p>
     </div>  
 
