--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-	<div class="container ">
+	<div class="container-fluid ">
 
         <nav class="navbar navbar-expand-lg navbar-light mx-auto border p-4 my-4">
             <div class="container-fluid">
