signup info added

--- a/App/Views/Home/index.html
+++ b/App/Views/Home/index.html
@@ -4,11 +4,13 @@
 
 {% block body %}
 
-    <h1>Welcome To BSG.com.np</h1>
-    <p>
+    <h1 class="text-center">Welcome To BSG.com.np</h1>
+    <p class="text-center">
+        
         It's a page developed and designed by CSIT students of birendra multiple campus.
     </p>
-    <div class = "mx-auto border p-4 my-4" >
+
+    <div class = "w-100 mx-auto border p-4 my-4" >
         <p>
             <h1>Why is this page developed?</h1>
             <hr>
@@ -22,7 +24,7 @@
             General public can post their emmergency help post so that anyone near them can help them.
         </p>
     </div>
-    <div class = "mx-auto border p-4 my-4" >
+    <div class = "w-100 mx-auto border p-4 my-4" >
         <p>
             <h1>For whom is this page developed?</h1>
             <hr>
