--- a/App/Views/Profile/show.html
+++ b/App/Views/Profile/show.html
@@ -5,6 +5,7 @@
 {% block body %}
 
     <h1>Profile</h1>
+    <img src="{{ current_user.image }}" class="img-fluid border border-additive" width="74" height="74" alt="Profile picture" >
 
     <dl class="dl-horizontal">
         <dt>Name</dt>
@@ -20,5 +21,21 @@
     </dl>
 
     <a href="/profile/edit">Edit</a>
+
+    <h1 class="text-center">Your Posts</h1>    
+    {% for details in user_Posts %}
+        {% if details.user_id == current_user.id %}
+            <div class="w-50  mx-auto border p-4 my-4">
+                <p>
+                    <strong style = "font-size: large;">{{ details.name }}</strong> posted on <b>{{ details.post_type }}</b>
+                    <a href="/post/edit?post_id={{ details.post_id }}">Edit this post</a>
+                </p>
+                <pre class=" border">
+                    <h3>{{ details.post_title }} </h3>
+                    <p>{{ details.post_discription }}</p>
+                </pre>
+            </div>
+        {% endif %}
+    {% endfor %}
 
 {% endblock %}
