--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -48,42 +48,65 @@
 
 {% block body %}
 
-    <h1>Sign up</h1>
+    <div class="w-50  mx-auto border p-4 my-4">
 
-    {% if user.errors is not empty %}
+        <h1>Sign up</h1>
+        
+        {% if user.errors is not empty %}
         <p>Errors:</p>
         <ul>
             {% for error in user.errors %}
-                <li>{{ error }}</li>
+            <li>{{ error }}</li>
             {% endfor %}
         </ul>
-    {% endif %}
-
-    <form method="post" action="/signup/create" id="formSignup">
-
-        <div class="form-group">
-            <label for="inputName">Name</label>
-            <input id="inputName" name="name" placeholder="Name" autofocus value="{{ user.name }}" required class="form-control" />
-        </div>
-        <div class="form-group">
-            <label for="inputEmail">Email address</label>
-            <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" class="form-control" />
-        </div>
-        <div class="form-group">
-            <label for="inputPassword">Password</label>
-            <input type="password" id="inputPassword" name="password" placeholder="Password" required class="form-control" />
-        </div>
-
-        <div class="form-group">
-            <label for="sel1">Select Signup Category:</label>
-            <select class="form-control" id="sel1" name="category" required>
-              <option value="Signup as Student">Signup as Student</option>
-              <option value="Signup as Invester">Signup as Invester</option>
-            </select>
-        </div>
-
-        <button type="submit" class="btn btn-default">Sign up</button>
-
-    </form>
-
+        {% endif %}
+        
+        <form method="post" action="/signup/create" id="formSignup">
+            
+            <div class="form-group">
+                <label for="inputName">Name</label>
+                <input id="inputName" name="name" placeholder="Name" autofocus value="{{ user.name }}" required class="form-control" />
+            </div>
+            <div class="form-group">
+                <label for="inputEmail">Email address</label>
+                <input id="inputEmail" name="email" placeholder="email address" value="{{ user.email }}" required type="email" class="form-control" />
+            </div>
+            
+            <div class="form-group">
+                <label for="gender">Please Select Gender</label>
+                <select class="form-control " id="gender" name="gender" required>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="none">Rather not say</option>
+                </select>
+            </div>
+            
+            <div class="form-group">
+                <label for="dob">Date Of Birth:</label>
+                <input type="date" class="form-control " id="dob" name="dob" min="1910-12-12" max="<?php echo date('Y-m-d')?>" required>
+            </div>
+            
+            <div class="form-group">
+                <label for="image">help us to identify you</label>
+                <input type="file" class="form-control" id="image" name="image">
+            </div>
+            <div class="form-group">
+                <label for="inputPassword">Password</label>
+                <input type="password" id="inputPassword" name="password" placeholder="Password" required class="form-control" />
+            </div>
+            
+            <div class="form-group">
+                <label for="sel1">Select Signup Category:</label>
+                <select class="form-control" id="sel1" name="category" required>
+                    <option value="Signup as Student">Signup as Student</option>
+                    <option value="Signup as Invester">Signup as Invester</option>
+                </select>
+            </div>
+            
+            <button type="submit" class="btn btn-default">Sign up</button>
+            
+        </form>
+        
+    </div>
 {% endblock %}
+        
