--- a/App/Views/post/new.html
+++ b/App/Views/post/new.html
@@ -26,6 +26,9 @@
                 <label for="inputTitle">Title</label>
                 <input id="inputTitle" name="title" placeholder="Title" autofocus required class="form-control" />
             </div>
+            <!-- <div class="form-group">
+                <input id="inputTitle" name="title" placeholder="Title" value="" required class="form-control" hidden/>
+            </div> -->
             <div class="form-group">
                 <label for="sel1">Select Post Type:</label>
                 <select class="form-control" id="sel1" name="type" required>
