--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -61,7 +61,7 @@
         </ul>
         {% endif %}
         
-        <form method="post" action="/signup/create" id="formSignup">
+        <form method="post" action="/signup/create" id="formSignup" enctype="multipart/form-data">
             
             <div class="form-group">
                 <label for="inputName">Name</label>
@@ -97,7 +97,7 @@
             
             <div class="form-group">
                 <label for="sel1">Select Signup Category:</label>
-                <select class="form-control" id="sel1" name="category" required>
+                <select class="form-control" id="sel1" name="catogery" required>
                     <option value="Signup as Student">Signup as Student</option>
                     <option value="Signup as Invester">Signup as Invester</option>
                 </select>
