--- a/App/Views/Signup/new.html
+++ b/App/Views/Signup/new.html
@@ -98,8 +98,8 @@
             <div class="form-group">
                 <label for="sel1">Select Signup Category:</label>
                 <select class="form-control" id="sel1" name="catogery" required>
-                    <option value="Signup as Student">Signup as Student</option>
-                    <option value="Signup as Invester">Signup as Invester</option>
+                    <option value="Signup as student">Signup as Student</option>
+                    <option value="Signup as invester">Signup as Invester</option>
                 </select>
             </div>
             
