--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -16,9 +16,15 @@
                 <ul class="nav navbar-nav">
                     <li class="nav-item" ><a class="nav-link" href="/">Home</a></li>
                     <li class="nav-item" ><a class="nav-link" href="/post/show">Post</a></li>
-                    {% if current_user %}
-                    
-                    {% endif %}
+                    {# <li class="nav-item" ><a class="nav-link" href="/people/show">People</a></li> #}
+                    <li class="nav-item" >
+                        <form method="GET" class="d-flex" action="/people/search">
+                            <div class="form-group">
+                                <input type="search" name="search" placeholder="Search" value="{{ searched }}" class="form-control me-2" />
+                            </div>
+                            {# <button type="submit" class="btn btn-default">Search</button> #}
+                        </form>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     {% if current_user %}
