--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -8,45 +8,48 @@
     <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-
-	<div class="container-fluid ">
-
-        <nav class="navbar navbar-expand-lg navbar-light mx-auto border p-4 my-4">
-            <div class="container-fluid">
-                <ul class="nav navbar-nav">
-                    <li class="nav-item" ><a class="nav-link" href="/">Home</a></li>
-                    <li class="nav-item" ><a class="nav-link" href="/post/show">Post</a></li>
-                    {# <li class="nav-item" ><a class="nav-link" href="/people/show">People</a></li> #}
-                    <li class="nav-item" >
-                        <form method="GET" class="d-flex" action="/people/search">
-                            <div class="form-group">
-                                <input type="search" name="search" placeholder="Search" value="{{ searched }}" class="form-control me-2" />
-                            </div>
-                            {# <button type="submit" class="btn btn-default">Search</button> #}
-                        </form>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <a class="navbar-brand" href="/">Home</a>
+          <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/post/show">Post</a>
+                </li>
+                {% if current_user %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/profile/show">Profile</a>
                     </li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user %}
-                        <li class="nav-item"><a class="nav-link" href="/profile/show">Profile</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li>
-                        {% else %}
-                        <li class="nav-item" ><a class="nav-link" href="/signup/new">Sign up</a></li>
-                        <li class="nav-item" ><a class="nav-link" href="/login">log in</a></li>                         
-                    {% endif %}
-                </ul>
-            </div>
-        </nav>
-        {% for message in flash_messages %}
-            <div class="alert alert-{{ message.type }}">
-                {{ message.body }}
-            </div>
-        {% endfor %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Log out</a>
+                    </li>
+                    {% else %}
+                    <li class="nav-item" >
+                        <a class="nav-link" href="/signup/new">Sign up</a>
+                    </li>
+                    <li class="nav-item" >
+                        <a class="nav-link" href="/login">log in</a>
+                    </li>                         
+                {% endif %}
+            </ul>
+            <form class="d-flex">
+              <input class="form-control me-2" type="search" placeholder="Search" value="{{ searched }}" aria-label="Search">
+              {# <button class="btn btn-outline-success" type="submit">Search</button> #}
+            </form>
+          </div>
+        </div>
+    </nav>
+    {% for message in flash_messages %}
+        <div class="alert alert-{{ message.type }}">
+            {{ message.body }}
+        </div>
+    {% endfor %}
 
-        {% block body %}
-        {% endblock %}
-
-    </div>
+    {% block body %}
+    {% endblock %}
 
 
     <div>
