--- a/App/Views/People/index.html
+++ b/App/Views/People/index.html
@@ -6,8 +6,8 @@
   <div class="row row-cols-1 row-cols-md-3 g-4">
     {% for details in user %}
       <div class="col">
-        <div class="card h-100">
-          <img src="/images/profile/{{ details.image }}" class="card-img-top" alt="...">
+        <div class="card text-dark bg-warning m-1 h-100">
+          <img src="/images/profile/{{ details.image }}" class="card-img-top bg-light" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{ details.name }}</h5>
             <p class="card-text">
