--- a/App/Views/post/index.html
+++ b/App/Views/post/index.html
@@ -64,6 +64,15 @@
                             </pre>
                         </div>
                     {% endif %}
+                    {% if current_user.id == details.user_id %}
+                        <div class="card container">
+                            <p><strong style = "font-size: large;">{{ details.name }}</strong> posted on <b>{{ details.catogery }}</b></p>
+                            <pre class=" border">
+                                <h3>{{ details.title }}</h3>
+                                <p>{{ details.discription }}</p>
+                            </pre>
+                        </div>
+                    {% endif %}
                 {% endfor %}
             </div>
         </div>
