post view and add post improved

--- a/App/Views/post/index.html
+++ b/App/Views/post/index.html
@@ -46,31 +46,49 @@
                     {% endif %}
                     
                     {% if details.catogery == 'Seeking to invest' and current_user.catogery == "Signup as student" %}
-                        <div class="card container">
-                            <p><strong style = "font-size: large;">{{ details.name }}</strong> posted on <b>{{ details.catogery }}</b></p>
-                            <pre class=" border">
-                                <h3>{{ details.title }}</h3>
-                                <p>{{ details.discription }}</p>
-                            </pre>
+                        <div class="card text-dark bg-warning mb-3">
+                            <div class="card-header">
+                                <b>{{ details.name }}</b> posted on <b>{{ details.catogery }}</b>
+                                {% if current_user.id == details.user_id %}
+                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% endif %}
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">{{ details.title }}</h3>
+                                <p class="card-text">{{ details.discription }}</p>
+                            </div>
+                            <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
                     
                     {% if details.catogery == 'Seeking for invester' and current_user.catogery == "Signup as invester" %}
-                        <div class="card container">
-                            <p><strong style = "font-size: large;">{{ details.name }}</strong> posted on <b>{{ details.catogery }}</b></p>
-                            <pre class=" border">
-                                <h3>{{ details.title }}</h3>
-                                <p>{{ details.discription }}</p>
-                            </pre>
+                        <div class="card text-dark bg-warning mb-3">
+                            <div class="card-header">
+                                <b>{{ details.name }}</b> posted on <b>{{ details.catogery }}</b>
+                                {% if current_user.id == details.user_id %}
+                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% endif %}
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">{{ details.title }}</h3>
+                                <p class="card-text">{{ details.discription }}</p>
+                            </div>
+                            <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
                     {% if current_user.id == details.user_id %}
-                        <div class="card container">
-                            <p><strong style = "font-size: large;">{{ details.name }}</strong> posted on <b>{{ details.catogery }}</b></p>
-                            <pre class=" border">
-                                <h3>{{ details.title }}</h3>
-                                <p>{{ details.discription }}</p>
-                            </pre>
+                        <div class="card text-dark bg-warning mb-3">
+                            <div class="card-header">
+                                <b>{{ details.name }}</b> posted on <b>{{ details.catogery }}</b>
+                                {% if current_user.id == details.user_id %}
+                                <a href="/post/edit?post_id={{ details.id }}">edit</a>
+                                {% endif %}
+                            </div>
+                            <div class="card-body">
+                                <h3 class="card-title">{{ details.title }}</h3>
+                                <p class="card-text">{{ details.discription }}</p>
+                            </div>
+                            <!-- <button type="submit">Help</button> -->
                         </div>
                     {% endif %}
                 {% endfor %}
